Recration du jeu pour le multi sans serveur/client pour le moment

--- a/build.gradle
+++ b/build.gradle
@@ -57,6 +57,7 @@ project(":core") {
 
     dependencies {
         api "com.badlogicgames.gdx:gdx:$gdxVersion"
+        implementation 'com.github.crykn:kryonet:2.22.9'
         
     }
 }
